--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,13 @@
 <div id="blackover-nav" class="blackover"></div>
 <nav id="menu">
     <ul>
-        <h3>Navigation</h3>
-        <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li><a href="{{ site.baseurl }}/about">About</a></li>
-        <li><a href="{{ site.baseurl }}/authors">Contributors <span class="badge badge-primary">new</span></a></li>
-        <li><a target="_blank" href="https://bootstrapstarter.com/jekyll-theme-memoirs/">Get Memoirs</a></li>      
-        <li><a href="{{ site.baseurl }}/contact">Contact</a></li>       
+        <h3>Mau Kemana?</h3>
+        <li><a href="{{ site.baseurl }}/">Beranda</a></li>
+        <li><a href="{{ site.baseurl }}/about">Tentang</a></li>
+        <li><a href="{{ site.baseurl }}/authors">Admin <span class="badge badge-primary">wtf</span></a></li>
+        <li><a target="_blank" href="https://karimiariq.github.io/dev">/dev</a></li>   
+        <li><a target="_blank" href="https://karimiariqn.my.id">/bio</a></li>     
+        <li><a href="{{ site.baseurl }}/contact">Kontak</a></li>       
     </ul>   
 </nav>
 
