--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,8 @@
         <li><a href="{{ site.baseurl }}/about">Tentang</a></li>
         <li><a href="{{ site.baseurl }}/authors">Admin <span class="badge badge-primary">wtf</span></a></li>
         <li><a target="_blank" href="https://karimiariq.github.io/dev">/dev</a></li>   
-        <li><a target="_blank" href="https://karimiariqn.my.id">/bio</a></li>     
+        <li><a target="_blank" href="https://karimiariqn.my.id">/bio</a></li>  
+        <li><a target="_blank" href="https://www.youtube.com/channel/UCGq6370joxU1rjLMf462kCg/">Subscribe!</a></li>     
         <li><a href="{{ site.baseurl }}/contact">Kontak</a></li>       
     </ul>   
 </nav>
