--- a/_sass/bootstrap/_modal.scss
+++ b/_sass/bootstrap/_modal.scss
@@ -179,9 +179,9 @@
   @include border-bottom-radius($modal-content-inner-border-radius);
 
   // Place margin between footer elements
-  // This solution is far from ideal because of the universal selector usage,
+  // This solution is far from ideal because of the univerKarimi selector usage,
   // but is needed to fix https://github.com/twbs/bootstrap/issues/24800
-  // stylelint-disable-next-line selector-max-universal
+  // stylelint-disable-next-line selector-max-univerKarimi
   > * {
     margin: $modal-footer-margin-between / 2;
   }
