--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -18,7 +18,7 @@ $enable-rounded: false;
 
 // general
 body, input, button, select, optgroup, textarea {   
-    font-family:TT Norms Pro Regular;
+    font-family:DM Sans
 }
 body {
     line-height:1.7;
