--- a/_includes/share.html
+++ b/_includes/share.html
@@ -16,8 +16,8 @@
         </li>
 
         <li class="ml-1 mr-1">
-            <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'width=550,height=435');return false;">
-                <i class="fab fa-linkedin-in"></i>
+            <a target="_blank" href="whatsapp://send?text=This is WhatsApp sharing example using link" data-action="share/whatsapp/share" onclick="window.open(this.href, 'width=550,height=435');return false;">
+                <i class="fab fa-whatsapp"></i>
             </a>
         </li>
 
