--- a/_includes/share.html
+++ b/_includes/share.html
@@ -14,12 +14,11 @@
                 <i class="fab fa-facebook-f"></i>
             </a>
         </li>
-
+        
         <li class="ml-1 mr-1">
-            <a target="_blank" href="whatsapp://send?text=This is WhatsApp sharing example using link" data-action="share/whatsapp/share" onclick="window.open(this.href, 'width=550,height=435');return false;">
+            <a target="_blank" href="whatsapp://send?text={{ page.title }}&url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'whatsapp-share', 'width=550,height=435');return false;">
                 <i class="fab fa-whatsapp"></i>
             </a>
         </li>
-
     </ul>
 </div>
