--- a/_includes/share.html
+++ b/_includes/share.html
@@ -20,5 +20,11 @@
                 <i class="fab fa-whatsapp"></i>
             </a>
         </li>
+
+        <li class="ml-1 mr-1">
+            <a target="_blank" href="tg://msg?text = {{ page.url | absolute_url }}?t=12" onclick="window.open(this.href, 'telegram-share', 'width=550,height=435');return false;">
+                <i class="fab fa-telegram"></i>
+            </a>
+        </li>
     </ul>
 </div>
