--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,14 +49,14 @@
 <div id="blackover-nav" class="blackover"></div>
 <nav id="menu">
     <ul>
-        <h3>Mau Kemana?</h3>
+        <h3>karimiariqn</h3>
+        <h6>ngedit foto + desain + belajar web + nyatir + turu</h6>
         <li><a href="{{ site.baseurl }}/">Beranda</a></li>
-        <li><a href="{{ site.baseurl }}/about">Tentang</a></li>
-        <li><a href="{{ site.baseurl }}/authors">Admin <span class="badge badge-primary">wtf</span></a></li>
+        <li><a href="{{ site.baseurl }}/tentang">Tentang</a></li>
         <li><a target="_blank" href="https://karimiariq.github.io/dev">/dev</a></li>   
         <li><a target="_blank" href="https://karimiariqn.my.id">/bio</a></li>  
         <li><a target="_blank" href="https://www.youtube.com/channel/UCGq6370joxU1rjLMf462kCg/">Subscribe!</a></li>     
-        <li><a href="{{ site.baseurl }}/contact">Kontak</a></li>       
+        <li><a href="{{ site.baseurl }}/kontak">Kontak</a></li>       
     </ul>   
 </nav>
 
@@ -97,7 +97,7 @@
     ================================================== -->
     <div class="newsletter text-center">
         <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
-        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
+        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-kontak-form validate" target="_blank" novalidate>
             <div class="mc-field-group d-inline-flex">
             <input type="email" placeholder="Your e-mail" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
             <input type="submit" value="Subscribe" name="subscribe" class="heart">
