--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,6 +1,8 @@
 <div class="share">
+    <div id="parent">
+        <div id="child-1">Bagikan</div></div>
     <p>
-        Bagikan
+        
     </p>
     <ul>
         <li class="ml-1 mr-1">
