--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -22,7 +22,7 @@ body, input, button, select, optgroup, textarea {
 }
 body {
     line-height:1.7;
-    background: #f4f4f4;
+    background: #d1d1d1;
 }
 a {
     color: darken($primary, 24%);
