--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,8 @@
         <h3>karimiariqn</h3>
         <li><a href="{{ site.baseurl }}/">Beranda</a></li>
         <li><a href="{{ site.baseurl }}/tentang">Tentang</a></li>
-        <h4>Sitemap</h4>
+
+        <li><h6>Sitemap</h6></li>
         <li><a target="_blank" href="https://karimiariq.github.io/design">/design</a></li>  
         <li><a target="_blank" href="https://karimiariq.github.io/dev">/dev</a></li>   
         <li><a target="_blank" href="https://karimiariqn.my.id">/bio</a></li>  
