--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,11 +54,11 @@
         <li><a href="{{ site.baseurl }}/tentang">Tentang</a></li>
 
         <li><h6>Sitemap</h6></li>
-        <li><a target="_blank" href="https://karimiariq.github.io/design">/design</a></li>  
-        <li><a target="_blank" href="https://karimiariq.github.io/dev">/dev</a></li>   
-        <li><a target="_blank" href="https://karimiariq.github.io/bio">/bio</a></li>  
+        <li><a target="_blank" href="https://karimiariqn.my.id/design">/design</a></li>  
+        <li><a target="_blank" href="https://karimiariqn.my.id/dev">/dev</a></li>   
+        <li><a target="_blank" href="https://karimiariqn.my.id/bio">/bio</a></li>  
         
-        <li><a target="_blank" href="https://www.youtube.com/channel/UCGq6370joxU1rjLMf462kCg/">Subscribe!</a></li> 
+        <li><a target="_blank" href="https://www.youtube.com/channel/@karimiariqn/">Subscribe!</a></li> 
         <li><a href="{{ site.baseurl }}/kontak">Kontak</a></li>       
     </ul>   
 </nav>
